Revert "fix for message overflowing in IE10"
This reverts commit 959a572b79a50bce4d13f3e4a098eeb4187374db.

--- a/public/bootstrap/less/trp3.less
+++ b/public/bootstrap/less/trp3.less
@@ -73,7 +73,6 @@ body {
 	/*overflow-x: hidden;*/
   background-color: white;
   .user-select(none);
-  font-family: sans-serif;
 }
 
 a {
@@ -1430,7 +1429,7 @@ ul li.placeholder:before {
 	text-align: center;
 /*	padding-top: 40px;*/
 	top: 0px;
-  bottom: 70px;
+  bottom: 70px !important;
   right: 0px;
   /* this min height isn't the best solution*/
   /* we need the content panel to take up the entire middle of the screen*/
